--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
-# Node.js / TypeScript
+# Dependencies
 node_modules/
+
+# Lock files (keep package.json only)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Build artifacts
 dist/
 build/
+out/
+coverage/
+*.tsbuildinfo
+
+
+# Logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
 
-# OS files
+# Editor / System files
+.vscode/
+.idea/
 .DS_Store
 Thumbs.db
 
-# TypeScript build cache
-*.tsbuildinfo
-
-# VSCode
-.vscode/
-
-# Logs / Temp
-logs/
-temp/
-tmp/
+# Cache
+.cache/
+.tmp/
+.eslintcache
